    - Dev-C++ (win32) project file is automatically updated with
      the version info from configure.in

  * src/DLS.cpp, src/DLS.h:
    - added Sampler::AddSampleLoop() and Sampler::DeleteSampleLoop() methods
    - fixed write support for big-endian systems
    - improved handling of fixed length info strings - separate default
      lengths can be specified for each INFO chunk

  * src/gig.cpp, src/gig.h:
    - fixed segmentation fault in the gig::File destructor sequence which
      happened when gig::Group informations were accessed before
    - fixed write support for big-endian systems
    - defined lengths of a fixed set of info strings. These strings
      are saved when the file is written, even if they are empty.
    - added missing parameter initalizations in sample, region and
      instrument constructors
    - clear unused fields when saving samples and regions
    - fixed write support bugs: v3 dimension limits and chunksize
      weren't saved, leverage controller of type controlchange
      couldn't be saved, group name list chunk was placed wrong,
      dimension region chunks also placed wrong
    - added initialization of some fixed info strings in file and
      instrument
    - write support: files created by libgig will now have the RIFF
      chunks in correct order
    - write support: two previously unknown fields in dimension
      definition are now saved
    - added constants for gig file versions
    - write support: the 3crc and einf chunks are now created or
      updated when a file is saved (3crc contains sample checksums,
      einf contains file statistics)

  * src/RIFF.cpp, src/RIFF.h:
    - added File::SetByteOrder method

Version 3.1.1 (24 Mar 2007)

  * packaging changes:
    - ported to Windows using native Windows functions for file IO
      (provided Dev-C++ + mingw project file)
    - only export relevant files to Doxygen API documentation

  * src/gig.cpp, src/gig.h: